--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#">Contact me</a></li>
             </ul>
         </nav>
+        </div>
         <div class="header-text">
             <p>Computer Science Student</p>
             <h1>Hi, I'm <span>Fourat</span> Khelifi from Tunisia</h1>
@@ -53,11 +54,10 @@
                 <li>Unity</li>
                 <li>Flutter</li>
                 <li>Android Studio</li>
-                <li>Photoshop</li>
+                <li>Photoshoppa</li>
                 <li>FL Studio</li>
             </ul>
         </div>
-    </div>
     </div>
 </body>
 </html>
