--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li>Unity</li>
                 <li>Flutter</li>
                 <li>Android Studio</li>
-                <li>Photoshoppa</li>
+                <li>Photoshop</li>
                 <li>FL Studio</li>
             </ul>
         </div>
