--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE = edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://drive.google.com/file/d/1Nuu9f8StBMR2c6Rpwopn_lQPAbCKhyir/view?usp=sharing" />
+    <meta property="og:image:secure_url" content="https://drive.google.com/file/d/1Nuu9f8StBMR2c6Rpwopn_lQPAbCKhyir/view?usp=sharing">
     <title>Fourat Khelifi</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
