--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="tab-contents active-tab" id="education">
             <ul>
-                <li>Licence Fondamentale en Informatique et Multimédia<br><div id="span1">Institut Supérieur des Arts Multimédia de la Manouba</div><div id="span2">2021 - maintenant</div></li>
+                <li>Licence Fondamentale en Informatique et Multimédia<br><div id="span1">Institut Supérieur des Arts Multimédia de la Manouba</div><div id="span2">2021 - now</div></li>
                 <li>Baccalauréat en Mathématiques <br><div id="span1">Lycée Farabi Mornaguia</div><div id="span2">2020 - 2021</div></li>
             </ul>
         </div>
